add bindel project page; add hero section; add fonts

--- a/frontend/src/routes/app.css
+++ b/frontend/src/routes/app.css
@@ -1,3 +1,51 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        font-family: Circe;
+        font-weight: 300;
+        src: url("/fonts/circe-light.woff")
+    }
+    @font-face {
+        font-family: Circe;
+        font-weight: 400;
+        src: url("/fonts/circe-regular.woff")
+    }
+    @font-face {
+        font-family: Circe;
+        font-weight: 700;
+        src: url("/fonts/circe-bold.woff")
+    }
+    @font-face {
+        font-family: Dincondensed;
+        font-weight: 700;
+        src: url("/fonts/dincon-bold.woff")
+    }
+}
+
+h1 {
+    @apply text-3xl md:text-4xl font-bold
+}
+
+
+h1.card:hover {
+    @apply no-underline
+}
+
+.nav-link {
+    @apply text-2xl font-light
+}
+
+.nav-link:hover {
+    @apply underline text-blue-800 border-blue-800 no-underline border-b-2 dark:hover:border-blue-800
+}
+
+.nav-link.active-link {
+    @apply text-blue-800 border-b-2 dark:border-gray-600
+}
+
+h2 {
+    @apply text-xl md:text-2xl
+}
